fix spacing bug on harvest inspectors

--- a/app/assets/stylesheets/maps/main_map.scss
+++ b/app/assets/stylesheets/maps/main_map.scss
@@ -18,11 +18,12 @@
        @media (min-width: 769px) {
          height: 620px;
          position: absolute;
+         top: 0;
          left: 11%;
          box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
          max-width: 260px;
          height: 600px;
-         z-index: 2;
+        //  z-index: 2;
          overflow: hidden;
        }
        #description-desktop {
