--- a/app/assets/stylesheets/users/logbook/logbook_header.scss
+++ b/app/assets/stylesheets/users/logbook/logbook_header.scss
@@ -8,6 +8,7 @@
   background-color: transparent;
   position: absolute;
   top: -30px;
+  z-index: 3;
   #left {
     background-color: transparent;
   }
