--- a/app/assets/stylesheets/users/switchable_window/harvest_inspector.scss
+++ b/app/assets/stylesheets/users/switchable_window/harvest_inspector.scss
@@ -30,7 +30,7 @@
       text-transform: uppercase;
       h3 {
         font-family: 'teko-medium';
-        height: 100%;
+        // height: 100%;
         margin: 0;
         padding: 10px;
         text-align: left;
@@ -63,28 +63,24 @@
       text-align: left;
     }
     a {
-      display: block;
       font-size: 26px;
       color: $water-blue;
       text-transform: uppercase;
       width: 100%;
-      width: 100%;
-      height: 50px;
-      margin: 10px;
-      img.avatar-mobile {
-        width: 45px;
-        height: 45px;
-        border-radius: 100%;
-        margin: 0 10px 0 0;
-        padding: 0;
-      }
-      h3 {
-        font-family: 'teko-medium';
-        height: 100%;
-        margin: 0;
-        padding: 10px;
-        text-align: left;
-      }
+
+    }
+    img.avatar-mobile {
+      width: 45px;
+      height: 45px;
+      border-radius: 100%;
+      margin: 0 10px 0 0;
+      padding: 0;
+    }
+    h3 {
+      font-family: 'teko-medium';
+      margin: 0;
+      padding: 5px;
+      text-align: left;
     }
     p {
       line-height: 20px;
